RESOLVED FIXED36362
Web Inspector: editing shorthands does not always work.
https://bugs.webkit.org/show_bug.cgi?id=36362
Summary Web Inspector: editing shorthands does not always work.
Pavel Feldman
Reported 2010-03-19 05:54:05 PDT
Editing value markup (that is converted to an editable field) produces &nbsp; (0xA0) instead of space (0x20) character in the areas that are siblings to the markup spans. I.e. instead of "3px <span>5px</span>", we get "3px&nbsp;<span>...". Native code that is assigning textContent of such a value to style fails. Drive-by fixes in the patch are: - restored fallback for shorthand property getter - made enable/disable checkbox visible when unckecked regardless of the hover state. This allows distinguishing of the overriden values vs manually disabled ones.
Attachments
[PATCH] Proposed fix. (9.56 KB, patch)
2010-03-19 05:58 PDT, Pavel Feldman
timothy: review+
Pavel Feldman
Comment 1 2010-03-19 05:58:59 PDT
Created attachment 51147 [details] [PATCH] Proposed fix.
Pavel Feldman
Comment 2 2010-03-19 06:35:25 PDT
Committing to http://svn.webkit.org/repository/webkit/trunk ... M WebCore/ChangeLog M WebCore/inspector/InspectorDOMAgent.cpp M WebCore/inspector/InspectorDOMAgent.h M WebCore/inspector/front-end/StylesSidebarPane.js M WebCore/inspector/front-end/inspector.css Committed r56237
Note You need to log in before you can comment on or make changes to this bug.