2010-03-19  Pavel Feldman  <pfeldman@chromium.org>

Reviewed by Timothy Hatcher.

        Web Inspector: editing shorthands does not always work.

        https://bugs.webkit.org/show_bug.cgi?id=36362

        * inspector/InspectorDOMAgent.cpp:
        (WebCore::InspectorDOMAgent::applyStyleText):
        (WebCore::InspectorDOMAgent::populateObjectWithStyleProperties):
        (WebCore::InspectorDOMAgent::shorthandValue):
        * inspector/InspectorDOMAgent.h:
        * inspector/front-end/StylesSidebarPane.js:
        (WebInspector.StylePropertyTreeElement.prototype):
        * inspector/front-end/inspector.css:
        (.section .properties li.disabled .enabled-button):
        * inspector/front-end/inspector.js:
        (WebInspector.startEditing.editingCommitted):


Canonical link: https://commits.webkit.org/47531@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56237 268f45cc-cd09-0410-ab3c-d52691b4dbfc